--- a/bakup/config.json
+++ b/bakup/config.json
@@ -1,18 +1,18 @@
 {
     "last_state": {
         "preference": true,
-        "db_confidence": 0.9,
+        "db_confidence": 0.7,
         "db_use_conf_model": false,
         "db_save": "Disabled",
-        "last_opened_tab": 0,
+        "last_opened_tab": 4,
         "state_close_connection_pool": true
     },
     "tabs": {
         "cam_1": {
             "tab_out": 0,
             "yolo_name": "yolov8n",
-            "source_in": "file",
-            "source_value": "data/video/start_video.mp4",
+            "source_in": "camera",
+            "source_value": null,
             "confidence_threshold": 0.3,
             "iou_threshold": 0.45,
             "frame_interval": 0,
@@ -36,7 +36,7 @@
             "source_in": "file",
             "source_value": null,
             "confidence_threshold": 0.3,
-            "iou_threshold": 0.47,
+            "iou_threshold": 0.45,
             "frame_interval": 0,
             "in_out_area": "IN",
             "display_area": null
@@ -49,7 +49,7 @@
             "confidence_threshold": 0.3,
             "iou_threshold": 0.45,
             "frame_interval": 0,
-            "in_out_area": "IN",
+            "in_out_area": "OUT",
             "display_area": null
         }
     }
