--- a/config.json
+++ b/config.json
@@ -11,36 +11,19 @@
         "cam_1": {
             "tab_out": 0,
             "yolo_name": "yolov8n",
-            "source_in": "file",
-            "source_value": "/Users/admin/Project/CV-Project/Vtormet-4cam/data/video/Video_3.mp4",
+            "source_in": "camera",
+            "source_value": null,
             "confidence_threshold": 0.3,
             "iou_threshold": 0.45,
             "frame_interval": 0,
             "in_out_area": "IN",
-            "display_area": {
-                "top_left": [
-                    0.22646310432569974,
-                    0.2154046997389034
-                ],
-                "top_right": [
-                    0.6972010178117048,
-                    0.2154046997389034
-                ],
-                "bottom_right": [
-                    0.6972010178117048,
-                    0.7140992167101827
-                ],
-                "bottom_left": [
-                    0.22646310432569974,
-                    0.7140992167101827
-                ]
-            }
+            "display_area": null
         },
         "cam_2": {
             "tab_out": 1,
             "yolo_name": "yolov8n",
             "source_in": "file",
-            "source_value": "/Users/admin/Project/CV-Project/Vtormet-4cam/data/video/Video_1.mp4",
+            "source_value": null,
             "confidence_threshold": 0.3,
             "iou_threshold": 0.45,
             "frame_interval": 0,
@@ -51,57 +34,23 @@
             "tab_out": 2,
             "yolo_name": "yolov8n",
             "source_in": "file",
-            "source_value": "/Users/admin/Project/CV-Project/Vtormet-4cam/data/video/Video_2.mp4",
-            "confidence_threshold": 0.12,
+            "source_value": null,
+            "confidence_threshold": 0.3,
             "iou_threshold": 0.45,
             "frame_interval": 0,
             "in_out_area": "IN",
-            "display_area": {
-                "top_left": [
-                    0.25,
-                    0.24934725848563968
-                ],
-                "top_right": [
-                    0.7544529262086515,
-                    0.24934725848563968
-                ],
-                "bottom_right": [
-                    0.7544529262086515,
-                    0.9347258485639687
-                ],
-                "bottom_left": [
-                    0.25,
-                    0.9347258485639687
-                ]
-            }
+            "display_area": null
         },
         "cam_4": {
             "tab_out": 3,
             "yolo_name": "yolov8n",
             "source_in": "file",
-            "source_value": "/Users/admin/Project/CV-Project/Vtormet-4cam/data/video/Full.mp4",
-            "confidence_threshold": 0.14,
+            "source_value": null,
+            "confidence_threshold": 0.3,
             "iou_threshold": 0.45,
             "frame_interval": 0,
             "in_out_area": "OUT",
-            "display_area": {
-                "top_left": [
-                    0.06297709923664122,
-                    0.014360313315926894
-                ],
-                "top_right": [
-                    0.9395674300254453,
-                    0.014360313315926894
-                ],
-                "bottom_right": [
-                    0.9395674300254453,
-                    0.5
-                ],
-                "bottom_left": [
-                    0.06297709923664122,
-                    0.5
-                ]
-            }
+            "display_area": null
         }
     }
 }
