--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,10 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "vtormet_cv"
-version = "0.0.1"
-description = "detection of explosive objects (HEH) in scrap metal"
+name = "Advanced Video Processing Application"
+version = "1.0.0"
+description = "This is a powerful and flexible application developed using PyQt6, designed for real-time processing of 4 video streams using the YOLOv8-OBB model.
+ "
 authors = [
   { name = "Oleg Shamaev" },
 ]
