--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,38 @@ build-backend = "flit_core.buildapi"
 [project]
 name = "Advanced Video Processing Application"
 version = "1.0.0"
-description = "This is a powerful and flexible application developed using PyQt6, designed for real-time processing of 4 video streams using the YOLOv8-OBB model.
- "
+description = """
+This is a powerful and flexible application developed using PyQt6, designed for real-time 
+processing of 4 video streams using the YOLOv8-OBB model.
+"""
 authors = [
   { name = "Oleg Shamaev" },
 ]
-
 readme = "README.md"
+license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3",
-    
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
 ]
-requires-python = "~=3.10.11"
+keywords = ["video processing", "PyQt6", "YOLOv8-OBB", "real-time", "object detection"]
+
+dependencies = [
+    "PyQt6",
+    "ultralytics",
+    "opencv-python-headless",
+    "numpy",
+    "psycopg2",
+]
+
+requires-python = ">=3.10,<4.0"
+include = ["src", "README.md", "LICENSE", "Makefile"]
+
+[project.scripts]
+advanced_video_processing = "src.main:main"  # assuming you have a main function in src/main.py
 
 [tool.black]
 line-length = 99
@@ -25,9 +45,38 @@ exclude = '''
 /(
     \.git
   | \.venv
+  | build
+  | dist
+  | logs
+  | data
 )/
 '''
 
-[tool.ruff.lint.isort]
-known_first_party = ["vtormet_cv"]
+[tool.ruff]
+select = ["E", "W", "F", "C", "N"]
+ignore = ["E203", "E266", "E501", "W503", "E402"]
+per-file-ignores = {
+    "__init__.py": ["F401", "F403"],
+}
+
+[tool.isort]
+profile = "black"
+known_first_party = ["src"]
 force_sort_within_sections = true
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = ["tests"]
+
+[tool.mypy]
+python_version = "3.10"
+warn_unused_configs = true
+ignore_missing_imports = true
+disallow_untyped_defs = true
+
+[tool.pylint]
+disable = ["C0114", "C0115", "C0116"]
+output-format = "colorized"
+reports = false
+max-line-length = 99
