Change  setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,17 @@
 ignore = E731,E266,E501,C901,W503
 max-line-length = 99
 exclude = .git,notebooks,references,models,data
+
+[tool.black]
+line-length = 99
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.venv
+)/
+'''
+
+[tool.isort]
+profile = "black"
+known_first_party = ["src"]
